# cookiecutter-pkg

./: README.md  cookiecutter.json
{{cookiecutter.__package_slug}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.__package_slug}}/src/{{cookiecutter.__package_slug}}/: README.md  __init__.py  __main__.py  main.py
