[project]
name = "{{cookiecutter.package_name}}"
# NOTE: conflict name for 'version', must use specific jinja syntax to resolve.
version = "{{cookiecutter.version | default('0.1.0')}}"
description = "{{cookiecutter.description}}"
authors = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" },
]
license = "{{cookiecutter.license}}"
readme = "README.md"
requires-python = "{{cookiecutter.requires_py}}"
dependencies = [
    "pandas>=3.0.0",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "SQLAlchemy>=2.0.0",
    "sqlalchemy-access>=2.0.2",
    "pyodbc>=5.3.0",
    "greenlet>=3.2.2",
    "dynaconf>=3.1.11",
    "rich>=15.0.0",
    "typer>=0.26.0",
    "duckdb>=1.5.2",
]
# source: https://browniebroke.com/blog/convert-existing-poetry-to-src-layout/
packages = [{ include = "{{cookiecutter.package_name}}", from = "src" }]


[project.urls]
homepage = "{{cookiecutter.git_repo}}"
repository = "{{cookiecutter.git_repo}}"
Changelog = "{{cookiecutter.git_repo}}/releases"

# [tool.poetry.dependencies]
# python changed to allow install of scipy
# python = "^3.12"
# SQLAlchemy = "^2.0.0"
# sqlalchemy addin to connect to MS Access databases
# sqlalchemy-access = "^2.0.2"
# greenlet version ^3.2.2 for python 3.14, it is a dependency of pyodbc
# greenlet = "^3.2.2"
# pyodbc = "5.3.0"
# dynaconf = "^3.1.11"
# rich = "^12.5.1"
# typer = "^0.22.0"
# duckdb = "^1.5.2"
# openpyxl = "^3.1.5"
# numpy = "^2.3.4"
# pandas = "^3.0.0"

[tool.poetry.group.dev.dependencies]
# pre-commit = "^3.6.2"
pre-commit = "^4.6.0"
pre-commit-hooks = "^5.0.0"
mypy = "^0.971"
typeguard = "^2.13.3"
mkdocs = "^1.5.3"
mkdocstrings = "^0.19.0"
mkdocs-material = "^8.5.4"
mkdocstrings-python = "^0.7.1"
pytest = "^9.0.2"
ruff = "^0.14.14"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
# source: https://browniebroke.com/blog/convert-existing-poetry-to-src-layout/
pythonpath = ["src"]
testpaths = ["tests", "integration"]

[tool.ruff]
# source https://blog.jerrycodes.com/ruff-the-python-linter/
# use this option if you want 'strict' style which is a bit too much
# select = ["ALL"]


# https://mypy.readthedocs.io/en/stable/config_file.html#config-file
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ruamel.yaml", "io", "dynaconf"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
